--- a/index.html
+++ b/index.html
@@ -1,45 +1,7 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="
         width=device-width,
         user-scalable=no,
         initial-scale=1.0,
         maximum-scale=1.0,
         minimum-scale=1.0
-      ">
-    <title>Product cards</title>
-    <link rel="stylesheet" href="/style.e308ff8e.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <script src="/style.e308ff8e.js"></script></head>
-  <body>
-    <div class="card" data-qa="card">
-      <img class="card__product-image" src="/imac.7817668a.jpeg" alt="productImage">
-
-      <h2 class="card__title">APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)</h2>
-      <p class="card__product-code">Product code: 195434</p>
-
-      <div class="review">
-        <div class="review__stars review__stars_star--4">
-          <div class="review__star"></div>
-          <div class="review__star"></div>
-          <div class="review__star"></div>
-          <div class="review__star"></div>
-          <div class="review__star"></div>
-        </div>
-        <span class="review__total">Reviews: 5</span>
-      </div>
-
-      <div class="card__price">
-        <div class="card__price-title">Price:</div>
-        <div class="card__price-amount">$2,199</div>
-      </div>
-
-      <a data-qa="hover" href="#" class="card__button">
-        buy
-      </a>
-    </div>
-  </body>
-</html>
+      "><title>Product cards</title><link rel="stylesheet" href="style.369419be.css"><link rel="preconnect" href="https://fonts.googleapis.com"><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"></head><body> <div class="card" data-qa="card"> <img class="card__product-image" src="imac.2690641a.jpeg" alt="productImage"> <h2 class="card__title">APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)</h2> <p class="card__product-code">Product code: 195434</p> <div class="review"> <div class="review__stars review__stars_star--4"> <div class="review__star"></div> <div class="review__star"></div> <div class="review__star"></div> <div class="review__star"></div> <div class="review__star"></div> </div> <span class="review__total">Reviews: 5</span> </div> <div class="card__price"> <div class="card__price-title">Price:</div> <div class="card__price-amount">$2,199</div> </div> <a data-qa="hover" href="#" class="card__button"> buy </a> </div> </body></html>
